# TraitLexicon

./: CITATION.cff  CLI_USAGE.md  CORE_TOOLS_v0.2_USAGE.md  GITHUB_ACTIONS_VALIDATION.md  PYPROJECT_SCRIPT_BLOCK.md  PYPROJECT_SCRIPT_PATCH.md  README.md  TREE_STATUS.md  VALIDATOR_USAGE.md  pyproject.toml
.github/wokflows/: validate-yaml.yml
data/modules/algae/bioenergy/: algal_lipid_carbohydrate_biofuel.yaml
data/modules/algae/pigments/: chlorophyll_carotenoid_phycobilin.yaml
data/modules/algae/remediation/: metallothionein_phytochelatin_gst_detox.yaml
data/modules/fungi/enzymes/: cellulase_amylase_protease.yaml
data/ontology_maps/: README.md  go_terms_seed.yaml  kegg_terms_seed.yaml  mapman_terms_seed.yaml  pfam_interpro_seed.yaml  plant_ontology_seed.yaml  plant_trait_ontology_seed.yaml
data/seed_batches/: seed_batch_01_index.yaml
data/vocab/: README.md  confidence_levels.yaml  context_fields.yaml  curation_statuses.yaml  evidence_levels.yaml  gene_roles.yaml  kingdom_scopes.yaml  placeholder_gene_flags.yaml  relationship_types.yaml  trait_categories.yaml  trait_synonyms_seed.yaml
docs/: curation_guidelines.md  evidence_levels.md  legacy_seed_conversion.md
examples/: README.md  phenosieve_export_example.yaml  query_algal_biofuel.yaml  query_fragrant_rice.yaml  query_fungal_secondary_metabolites.yaml  query_red_flower.yaml  query_yellow_leaf.yaml
schema/: README.md  module.schema.json  phenosieve_export.schema.json  trait_entry.schema.json
scripts/: validate_yaml.py
traitlexicon/: __init__.py  cli.py  exporter.py  indexer.py  loader.py  resolver.py  scaffold.py  validator.py
(+16 files in other folders)
